assignment1/target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'readInteger'", "'printInteger'", 
                     "'readFloat'", "'printFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'", 
                     "'auto'", "'break'", "'boolean'", "'do'", "'else'", 
                     "'false'", "'float'", "'for'", "'function'", "'if'", 
                     "'integer'", "'return'", "'string'", "'true'", "'void'", 
                     "'while'", "'out'", "'continue'", "'of'", "'inherit'", 
                     "'array'", "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", 
                     "'||'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'::'", "'!'", "'['", "']'", "'{'", "'}'", "'('", "')'", 
                     "','", "';'", "':'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", "FALSE", 
                      "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", 
                      "STRING", "TRUE", "VOID", "WHILE", "OUT", "CONTINUE", 
                      "OF", "INHERIT", "ARRAY", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "AND", "OR", "EQ", "NOT_EQ", "LT", "GT", "LTE", 
                      "GTE", "CONCAT", "NEGATION", "SQ_OPEN", "SQ_CLOSE", 
                      "CUR_OPEN", "CUR_CLOSE", "R_OPEN", "R_CLOSE", "COMMA", 
                      "SEMI_COLON", "COLON", "ASSIGN", "ID", "INT_LIT", 
                      "FLOAT_LIT", "STR_LIT", "CMTLINE", "CMTBLOCK", "WS", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_array_literal = 0
    RULE_literal = 1
    RULE_program = 2
    RULE_declare = 3
    RULE_var_decl = 4
    RULE_var_type = 5
    RULE_prim_type = 6
    RULE_varlist = 7
    RULE_intList = 8
    RULE_array_type = 9
    RULE_array_Ele = 10
    RULE_func_decl = 11
    RULE_func_type = 12
    RULE_para_list = 13
    RULE_para_dec = 14
    RULE_para_var = 15
    RULE_main_func = 16
    RULE_block_func = 17
    RULE_statement = 18
    RULE_for_stmt = 19
    RULE_if_stmt = 20
    RULE_while_stmt = 21
    RULE_do_while_stmt = 22
    RULE_break_stmt = 23
    RULE_cont_stmt = 24
    RULE_return_stmt = 25
    RULE_call_func = 26
    RULE_func_call = 27
    RULE_non_returned_func = 28
    RULE_returned_func = 29
    RULE_readInteger = 30
    RULE_printInteger = 31
    RULE_readFloat = 32
    RULE_printFloat = 33
    RULE_readBoolean = 34
    RULE_printBoolean = 35
    RULE_readString = 36
    RULE_printString = 37
    RULE_superFunc = 38
    RULE_preventDefault = 39
    RULE_assign_stmt = 40
    RULE_expression_list = 41
    RULE_expression = 42
    RULE_expression1 = 43
    RULE_expression2 = 44
    RULE_expression3 = 45
    RULE_expression4 = 46
    RULE_expression5 = 47
    RULE_expression6 = 48
    RULE_expression7 = 49
    RULE_operands = 50

    ruleNames =  [ "array_literal", "literal", "program", "declare", "var_decl", 
                   "var_type", "prim_type", "varlist", "intList", "array_type", 
                   "array_Ele", "func_decl", "func_type", "para_list", "para_dec", 
                   "para_var", "main_func", "block_func", "statement", "for_stmt", 
                   "if_stmt", "while_stmt", "do_while_stmt", "break_stmt", 
                   "cont_stmt", "return_stmt", "call_func", "func_call", 
                   "non_returned_func", "returned_func", "readInteger", 
                   "printInteger", "readFloat", "printFloat", "readBoolean", 
                   "printBoolean", "readString", "printString", "superFunc", 
                   "preventDefault", "assign_stmt", "expression_list", "expression", 
                   "expression1", "expression2", "expression3", "expression4", 
                   "expression5", "expression6", "expression7", "operands" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    AUTO=12
    BREAK=13
    BOOLEAN=14
    DO=15
    ELSE=16
    FALSE=17
    FLOAT=18
    FOR=19
    FUNCTION=20
    IF=21
    INTEGER=22
    RETURN=23
    STRING=24
    TRUE=25
    VOID=26
    WHILE=27
    OUT=28
    CONTINUE=29
    OF=30
    INHERIT=31
    ARRAY=32
    ADD=33
    SUB=34
    MUL=35
    DIV=36
    MOD=37
    AND=38
    OR=39
    EQ=40
    NOT_EQ=41
    LT=42
    GT=43
    LTE=44
    GTE=45
    CONCAT=46
    NEGATION=47
    SQ_OPEN=48
    SQ_CLOSE=49
    CUR_OPEN=50
    CUR_CLOSE=51
    R_OPEN=52
    R_CLOSE=53
    COMMA=54
    SEMI_COLON=55
    COLON=56
    ASSIGN=57
    ID=58
    INT_LIT=59
    FLOAT_LIT=60
    STR_LIT=61
    CMTLINE=62
    CMTBLOCK=63
    WS=64
    ERROR_CHAR=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Array_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CUR_OPEN(self):
            return self.getToken(MT22Parser.CUR_OPEN, 0)

        def CUR_CLOSE(self):
            return self.getToken(MT22Parser.CUR_CLOSE, 0)

        def expression_list(self):
            return self.getTypedRuleContext(MT22Parser.Expression_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_literal" ):
                return visitor.visitArray_literal(self)
            else:
                return visitor.visitChildren(self)




    def array_literal(self):

        localctx = MT22Parser.Array_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_array_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(MT22Parser.CUR_OPEN)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.T__1) | (1 << MT22Parser.T__3) | (1 << MT22Parser.T__5) | (1 << MT22Parser.T__7) | (1 << MT22Parser.FALSE) | (1 << MT22Parser.TRUE) | (1 << MT22Parser.SUB) | (1 << MT22Parser.NEGATION) | (1 << MT22Parser.CUR_OPEN) | (1 << MT22Parser.R_OPEN) | (1 << MT22Parser.ID) | (1 << MT22Parser.INT_LIT) | (1 << MT22Parser.FLOAT_LIT) | (1 << MT22Parser.STR_LIT))) != 0):
                self.state = 103
                self.expression_list()


            self.state = 106
            self.match(MT22Parser.CUR_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(MT22Parser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(MT22Parser.FLOAT_LIT, 0)

        def TRUE(self):
            return self.getToken(MT22Parser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MT22Parser.FALSE, 0)

        def STR_LIT(self):
            return self.getToken(MT22Parser.STR_LIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = MT22Parser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.FALSE) | (1 << MT22Parser.TRUE) | (1 << MT22Parser.INT_LIT) | (1 << MT22Parser.FLOAT_LIT) | (1 << MT22Parser.STR_LIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclareContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclareContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 110
                self.declare()
                self.state = 113 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.T__0 or _la==MT22Parser.ID):
                    break

            self.state = 115
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MT22Parser.Var_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MT22Parser.Func_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare" ):
                return visitor.visitDeclare(self)
            else:
                return visitor.visitChildren(self)




    def declare(self):

        localctx = MT22Parser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declare)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.func_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.n = None
            self._varlist = None # VarlistContext

        def varlist(self):
            return self.getTypedRuleContext(MT22Parser.VarlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def SEMI_COLON(self):
            return self.getToken(MT22Parser.SEMI_COLON, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MT22Parser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MT22Parser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl)
        localctx.n = 0
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            localctx._varlist = self.varlist()
            self.state = 122
            self.match(MT22Parser.COLON)
            self.state = 123
            self.var_type()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.ASSIGN:
                self.state = 124
                self.match(MT22Parser.ASSIGN)

                self.state = 125
                self.expression()
                self.state = 133
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 126
                        if not  (None if localctx._varlist is None else self._input.getText(localctx._varlist.start,localctx._varlist.stop)).count(',') > localctx.n :
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, " $varlist.text.count(',') > $n ")
                        self.state = 127
                        self.match(MT22Parser.COMMA)
                        self.state = 128
                        self.expression()
                        localctx.n += 1 
                    self.state = 135
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                self.state = 136
                if not  (None if localctx._varlist is None else self._input.getText(localctx._varlist.start,localctx._varlist.stop)).count(',') == localctx.n :
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, " $varlist.text.count(',') == $n ")


            self.state = 140
            self.match(MT22Parser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prim_type(self):
            return self.getTypedRuleContext(MT22Parser.Prim_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_type" ):
                return visitor.visitVar_type(self)
            else:
                return visitor.visitChildren(self)




    def var_type(self):

        localctx = MT22Parser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_type)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.prim_type()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prim_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_prim_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrim_type" ):
                return visitor.visitPrim_type(self)
            else:
                return visitor.visitChildren(self)




    def prim_type(self):

        localctx = MT22Parser.Prim_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_prim_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def varlist(self):
            return self.getTypedRuleContext(MT22Parser.VarlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = MT22Parser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varlist)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.match(MT22Parser.ID)
                self.state = 150
                self.match(MT22Parser.COMMA)
                self.state = 151
                self.varlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.INT_LIT)
            else:
                return self.getToken(MT22Parser.INT_LIT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_intList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntList" ):
                return visitor.visitIntList(self)
            else:
                return visitor.visitChildren(self)




    def intList(self):

        localctx = MT22Parser.IntListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_intList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(MT22Parser.INT_LIT)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MT22Parser.COMMA:
                self.state = 156
                self.match(MT22Parser.COMMA)
                self.state = 157
                self.match(MT22Parser.INT_LIT)
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def prim_type(self):
            return self.getTypedRuleContext(MT22Parser.Prim_typeContext,0)


        def SQ_OPEN(self):
            return self.getToken(MT22Parser.SQ_OPEN, 0)

        def intList(self):
            return self.getTypedRuleContext(MT22Parser.IntListContext,0)


        def SQ_CLOSE(self):
            return self.getToken(MT22Parser.SQ_CLOSE, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = MT22Parser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(MT22Parser.ARRAY)

            self.state = 164
            self.match(MT22Parser.SQ_OPEN)
            self.state = 165
            self.intList()
            self.state = 166
            self.match(MT22Parser.SQ_CLOSE)
            self.state = 168
            self.match(MT22Parser.OF)
            self.state = 169
            self.prim_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_EleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def SQ_OPEN(self):
            return self.getToken(MT22Parser.SQ_OPEN, 0)

        def expression_list(self):
            return self.getTypedRuleContext(MT22Parser.Expression_listContext,0)


        def SQ_CLOSE(self):
            return self.getToken(MT22Parser.SQ_CLOSE, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_array_Ele

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_Ele" ):
                return visitor.visitArray_Ele(self)
            else:
                return visitor.visitChildren(self)




    def array_Ele(self):

        localctx = MT22Parser.Array_EleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_Ele)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(MT22Parser.ID)

            self.state = 172
            self.match(MT22Parser.SQ_OPEN)
            self.state = 173
            self.expression_list()
            self.state = 174
            self.match(MT22Parser.SQ_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_func(self):
            return self.getTypedRuleContext(MT22Parser.Block_funcContext,0)


        def main_func(self):
            return self.getTypedRuleContext(MT22Parser.Main_funcContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def func_type(self):
            return self.getTypedRuleContext(MT22Parser.Func_typeContext,0)


        def R_OPEN(self):
            return self.getToken(MT22Parser.R_OPEN, 0)

        def R_CLOSE(self):
            return self.getToken(MT22Parser.R_CLOSE, 0)

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def para_list(self):
            return self.getTypedRuleContext(MT22Parser.Para_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):
